fix author name typo

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "b9f36bcf530f3d6b5c9cf39d2e260a99",
   "displayName": "B9F36BCF530F3D6B5C9CF39D2E260A99 (Theme)",
   "description": "Theme / edition: minimal semantic",
-  "publisher": "shahabkhalvatu",
+  "publisher": "shahabkhalvati",
   "author": {
     "name": "Shahab Khalvati",
     "email": "yo@shahabkhalvati.com",
