--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "categories": [
     "Themes"
   ],
+  "scripts": {
+    "publish": "vsce publish" 
+  },
   "contributes": {
     "themes": [
       {
